--- a/templates/view.html
+++ b/templates/view.html
@@ -8,10 +8,20 @@
     <div class="card shadow p-4 my-5 bg-body rounded">
         <h4>{{sender.name}}</h4>
         <hr>
-        <p>Email - {{sender.email}}</p>
-        <p>Account No - {{sender.account_no}}</p>
-        <p>IFSC Code - {{sender.ifsc_code}}</p>
+        <div class="row">
+            <div class="col-sm">
+                <p><strong>Email - </strong>{{sender.email}}</p>
+                <p><strong>Account No - </strong>{{sender.account_no}}</p>
+            </div>
 
+            <div class="col-sm">
+                <p><strong>Account Balance - </strong>{{sender.amount}}</p>
+                <p><strong>IFSC Code - </strong>{{sender.ifsc_code}}</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="card shadow p-4 my-5 bg-body rounded">
         <form method="POST" action="/transaction">
             {% csrf_token %}
             <div class="row mb-3 ">
@@ -26,12 +36,11 @@
 
                 <div class="col-md-6">
                     <label for="amount" class="form-label">Amount</label>
-                    <input type="number" class="form-control" id="amount" name="amount">
+                    <input type="number" class="form-control" id="amount" name="amount" required>
                 </div>
             </div>
             <button type="submit" name="submit" value="{{sender.account_no}}" class="btn btn-primary">Transfer</button>
         </form>
-
     </div>
 </div>
 
