--- a/templates/view.html
+++ b/templates/view.html
@@ -15,7 +15,7 @@
             </div>
 
             <div class="col-sm">
-                <p><strong>Account Balance - </strong>{{sender.amount}}</p>
+                <p><strong>Account Balance - </strong>&#8377 {{sender.amount}}</p>
                 <p><strong>IFSC Code - </strong>{{sender.ifsc_code}}</p>
             </div>
         </div>
