--- a/templates/base.html
+++ b/templates/base.html
@@ -39,6 +39,9 @@
                 <li class="nav-item {% block historyactive %}{% endblock historyactive %}">
                     <a class="nav-link" href="{% url 'history' %}">Transactions</a>
                 </li>
+                <li class="nav-item {% block donateactive %}{% endblock donateactive %}">
+                    <a class="nav-link" href="{% url 'donate' %}">Donate</a>
+                </li>
         </div>
     </nav>
 
